# numpy_annotated

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: pennylane_integration.ipynb
src/numpy_annotated/: __init__.py  annotation.py  json_format.py  ndarray.py  serializer.py  shape.py  validator.py
tests/: test_quantum_photonic.py
