[project]
name = "xanady-presentation"
version = "0.1.0"
description = "Pydantic v2 annotations for numpy.ndarray with dtype, shape, and JSON round-trip"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
notebook = [
    "jupyter>=1.0",
    "pennylane>=0.38",
    "matplotlib>=3.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/numpy_annotated"]

[tool.uv]
package = true
